[gd_scene load_steps=19 format=3 uid="uid://bx570xqwl6a7i"]

[ext_resource type="Script" path="res://src/ui.gd" id="1_assrp"]
[ext_resource type="Script" path="res://src/ui_hud.gd" id="2_t7ihg"]
[ext_resource type="PackedScene" uid="uid://dnhnrabrf57os" path="res://assets/scenes/hotbar.tscn" id="3_jmb8r"]
[ext_resource type="Script" path="res://src/ui_game.gd" id="4_r37xa"]
[ext_resource type="PackedScene" uid="uid://dv6li4wxrohgf" path="res://assets/scenes/inventory.tscn" id="5_q445p"]
[ext_resource type="PackedScene" uid="uid://ddxw2b6u1pxow" path="res://assets/scenes/item_slot.tscn" id="6_5hooo"]
[ext_resource type="Script" path="res://src/ui_title.gd" id="7_1ios3"]
[ext_resource type="Script" path="res://src/world_loader.gd" id="9_8qnxf"]
[ext_resource type="Script" path="res://src/world_creator.gd" id="10_ojp73"]
[ext_resource type="Texture2D" uid="uid://x46qnwrp88hj" path="res://assets/icons/icon_edit.png" id="11_5omgl"]
[ext_resource type="Script" path="res://src/ui_transition.gd" id="13_6da11"]
[ext_resource type="Script" path="res://src/opt_manager.gd" id="13_40axk"]
[ext_resource type="Script" path="res://src/mod_manager.gd" id="13_dbhdo"]
[ext_resource type="Script" path="res://src/ui_debug.gd" id="14_laiv1"]

[sub_resource type="GDScript" id="GDScript_ikl0f"]
script/source = "# ui_title_mainmenu.gd
class_name UI_Title_MainMenu
extends PanelContainer

@onready var load_button = $MarginContainer/VBoxContainer/LoadButton
@onready var new_button = $MarginContainer/VBoxContainer/NewButton
@onready var options_button = $MarginContainer/VBoxContainer/OptionsButton
@onready var mods_button = $MarginContainer/VBoxContainer/ModsButton
@onready var quit_button = $MarginContainer/VBoxContainer/QuitButton

func _ready() -> void:
	load_button.pressed.connect(func(): Ref.ui.title.menu = Ref.ui.title.world_loader)
	new_button.pressed.connect(func(): Ref.ui.title.menu = Ref.ui.title.world_creator)
	options_button.pressed.connect(func(): Ref.ui.title.menu = Ref.ui.title.opt_manager)
	mods_button.pressed.connect(func(): Ref.ui.title.menu = Ref.ui.title.mod_manager)
	quit_button.pressed.connect(func(): Ref.main.quit_to_desktop())
"

[sub_resource type="Animation" id="Animation_ubt67"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DissolveRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5xvxl"]
resource_name = "dissolve"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DissolveRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02u0i"]
_data = {
"RESET": SubResource("Animation_ubt67"),
"dissolve": SubResource("Animation_5xvxl")
}

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_assrp")

[node name="HUD" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_t7ihg")

[node name="ItemHotbar" parent="HUD" instance=ExtResource("3_jmb8r")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 694.0
offset_bottom = 82.0
mouse_filter = 2

[node name="InteractLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = 40.0
offset_right = 30.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_r37xa")

[node name="PlayerInventory" parent="Game" instance=ExtResource("5_q445p")]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="Game" instance=ExtResource("5_q445p")]
layout_mode = 2
offset_left = 720.0
offset_top = 10.0
offset_right = 760.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="Game" instance=ExtResource("5_q445p")]
visible = false
layout_mode = 2
offset_left = 10.0
offset_top = 360.0
offset_right = 50.0
offset_bottom = 400.0

[node name="GrabbedSlot" parent="Game" instance=ExtResource("6_5hooo")]
visible = false
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0

[node name="Title" type="PanelContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_1ios3")
metadata/_edit_use_anchors_ = true

[node name="Main" type="PanelContainer" parent="Title"]
layout_mode = 2
script = SubResource("GDScript_ikl0f")

[node name="MarginContainer" type="MarginContainer" parent="Title/Main"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/Main/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoadButton" type="Button" parent="Title/Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Load Game"

[node name="NewButton" type="Button" parent="Title/Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "New Game"

[node name="OptionsButton" type="Button" parent="Title/Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Options"

[node name="ModsButton" type="Button" parent="Title/Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Mods"

[node name="QuitButton" type="Button" parent="Title/Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Quit"

[node name="WorldLoader" type="PanelContainer" parent="Title"]
visible = false
layout_mode = 2
script = ExtResource("9_8qnxf")

[node name="MarginContainer" type="MarginContainer" parent="Title/WorldLoader"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/WorldLoader/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Title/WorldLoader/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/WorldLoader/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EmptyLabel" type="Label" parent="Title/WorldLoader/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "No worlds found."

[node name="BackButton" type="Button" parent="Title/WorldLoader/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Back"

[node name="WorldCreator" type="PanelContainer" parent="Title"]
visible = false
layout_mode = 2
script = ExtResource("10_ojp73")

[node name="MarginContainer" type="MarginContainer" parent="Title/WorldCreator"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/WorldCreator/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FarmNamePanel" type="PanelContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer/FarmNamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer/FarmNamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FarmNameLabel" type="Label" parent="Title/WorldCreator/MarginContainer/VBoxContainer/FarmNamePanel/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "New World"
horizontal_alignment = 1

[node name="FarmNameEdit" type="LineEdit" parent="Title/WorldCreator/MarginContainer/VBoxContainer/FarmNamePanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Farm Name"
alignment = 1
max_length = 20
expand_to_text_length = true

[node name="FarmNameEditButton" type="Button" parent="Title/WorldCreator/MarginContainer/VBoxContainer/FarmNamePanel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("11_5omgl")

[node name="PlayerNamePanel" type="PanelContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer/PlayerNamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Title/WorldCreator/MarginContainer/VBoxContainer/PlayerNamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerNameLabel" type="Label" parent="Title/WorldCreator/MarginContainer/VBoxContainer/PlayerNamePanel/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "New Player"
horizontal_alignment = 1

[node name="PlayerNameEdit" type="LineEdit" parent="Title/WorldCreator/MarginContainer/VBoxContainer/PlayerNamePanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Player Name"
alignment = 1
max_length = 20
expand_to_text_length = true

[node name="PlayerNameEditButton" type="Button" parent="Title/WorldCreator/MarginContainer/VBoxContainer/PlayerNamePanel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("11_5omgl")

[node name="PlayButton" type="Button" parent="Title/WorldCreator/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Play"

[node name="BackButton" type="Button" parent="Title/WorldCreator/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
text = "Back"

[node name="OptManager" type="PanelContainer" parent="Title"]
visible = false
layout_mode = 2
script = ExtResource("13_40axk")

[node name="MarginContainer" type="MarginContainer" parent="Title/OptManager"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/OptManager/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="Title/OptManager/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Back"

[node name="ModManager" type="PanelContainer" parent="Title"]
visible = false
layout_mode = 2
script = ExtResource("13_dbhdo")

[node name="MarginContainer" type="MarginContainer" parent="Title/ModManager"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Title/ModManager/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="Title/ModManager/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 32)
layout_mode = 2
size_flags_vertical = 5
text = "Back"

[node name="Transition" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_6da11")
metadata/_edit_use_anchors_ = true

[node name="DissolveRect" type="ColorRect" parent="Transition"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
libraries = {
"": SubResource("AnimationLibrary_02u0i")
}

[node name="Debug" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("14_laiv1")

[node name="MarginContainer" type="MarginContainer" parent="Debug"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Framerate" type="Label" parent="Debug/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS: 0.0"
